--- a/Blazor.Wasm.UI/Pages/Customer.razor
+++ b/Blazor.Wasm.UI/Pages/Customer.razor
@@ -1,6 +1,6 @@
 ﻿@page "/register"
 
-<PageTitle>Customer Creation</PageTitle>
+<PageTitle>New Customer</PageTitle>
 <EditForm Model="@customerModel" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" >
     <DataAnnotationsValidator></DataAnnotationsValidator>
    
