--- a/Blazor.Wasm.UI/Pages/Customer.razor
+++ b/Blazor.Wasm.UI/Pages/Customer.razor
@@ -4,7 +4,7 @@
 <EditForm Model="@customerModel" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" >
     <DataAnnotationsValidator></DataAnnotationsValidator>
    
-    <h1>New Customer/h1>
+    <h1>New Customer </h1>
     <div class="mb-3">
         <label for="firstName" class="form-label">First Name</label>
         <input type="text" class="form-control" id="firstName" @bind-value="customerModel.FirstName">
