calling customer api to save customer

--- a/Blazor.Wasm.UI/Pages/Customer.razor
+++ b/Blazor.Wasm.UI/Pages/Customer.razor
@@ -1,7 +1,7 @@
 ﻿@page "/register"
 
 <PageTitle>New Customer</PageTitle>
-<EditForm Model="@customerModel" OnValidSubmit="@HandleValidSubmit" OnInvalidSubmit="@HandleInvalidSubmit" >
+<EditForm Model="@customerModel" OnValidSubmit="@HandleValidSubmit" >
     <DataAnnotationsValidator></DataAnnotationsValidator>
    
     <h1>New Customer </h1>
