--- a/Blazor.Wasm.UI/Shared/NavMenu.razor
+++ b/Blazor.Wasm.UI/Shared/NavMenu.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="register">
-                <span class="oi" aria-hidden="true"></span> New Customer
+            <NavLink class="nav-link" href="customers">
+                <span class="oi" aria-hidden="true"></span> Customer
             </NavLink>
         </div>
          <div class="nav-item px-3">
