--- a/Blazor.Wasm.UI/Pages/DisplayCustomer.razor
+++ b/Blazor.Wasm.UI/Pages/DisplayCustomer.razor
@@ -6,6 +6,7 @@
     <td>@customer.LastName</td>
     <td>@customer.Email</td>
     <td>@customer.GenderId</td>
+    <td><button type="button" @onclick=@(()=>OnHandleDelete(@customer.Id)) class="btn btn-danger">Delete</button></td>
 </tr>
 
 
