pass notification from child to parent

--- a/Blazor.Wasm.UI/Pages/Customer.razor
+++ b/Blazor.Wasm.UI/Pages/Customer.razor
@@ -12,7 +12,7 @@
     </thead>
     <tbody>
         @foreach(var item in customers){
-            <DisplayCustomer customer="@item"></DisplayCustomer>
+            <DisplayCustomer OnDelete="@(customerId=>Reload(customerId))" customer="@item"></DisplayCustomer>
         
         }
        
