--- a/Blazor.Wasm.UI/Pages/Customer.razor
+++ b/Blazor.Wasm.UI/Pages/Customer.razor
@@ -1,7 +1,7 @@
 ﻿@page "/customers"
 <div class="d-flex">
     <h4 class="flex-grow-1">Customers</h4>
-    <button class="btn btn-primary">Create Customer</button>
+    <button class="btn btn-primary" @onclick="HandleCustomerCreate">Create Customer</button>
 </div>
 <table class="table">
     <thead>
@@ -20,5 +20,8 @@
         } 
     </tbody>
 </table>
+<CustomerEditDialog @ref="customerDialog" OnCustomerUpdated="HandleCustomerUpdated"></CustomerEditDialog>
 
-<NewCustomer @ref="newCustomer"></NewCustomer>
+
+
+
