--- a/Blazor.Wasm.UI/Pages/Shared/ConfirmationDialog.razor
+++ b/Blazor.Wasm.UI/Pages/Shared/ConfirmationDialog.razor
@@ -4,7 +4,7 @@
 
     </MatDialogContent>
     <MatDialogActions>
-    <MatButton OnClick="Cancel">@CancelText</MatButton>
+    <MatButton Outlined="true" OnClick="Cancel">@CancelText</MatButton>
         <MatButton OnClick="Confirm">@OkText</MatButton>
     </MatDialogActions>
 
