--- a/Blazor.Wasm.UI/Pages/DisplayCustomer.razor
+++ b/Blazor.Wasm.UI/Pages/DisplayCustomer.razor
@@ -7,8 +7,9 @@
     <td>@customer.Email</td>
     <td>@customer.GenderId</td>
     <td class="float-end">
-        <button type="button" class="btn btn-primary" @onclick="@(()=>OnHandleEdit(@customer))">Edit</button>
-        <button type="button" @onclick=@(()=>OnHandleDelete(@customer)) class="btn btn-danger">Delete</button></td>
+        <button type="button" class="btn @ThemeInfo.EditButtonClass" @onclick="@(()=>OnHandleEdit(@customer))">Edit</button>
+        <button type="button" @onclick=@(()=>OnHandleDelete(@customer)) class="btn @ThemeInfo.DeleteButtonClass">Delete</button>
+    </td>
 </tr>
 
 
